# ChaosSec

./: .gitignore  AWS_CREDENTIALS_EXPLAINED.md  CHAOS_MONKEY_VS_PENTEST.md  COMPLETE_DEMO_GUIDE.md  CREATE_IAM_USER_GUIDE.md  DEMO_AND_TESTING_GUIDE.md  DEMO_TARGET_APP_STRATEGY.md  DEMO_TESTING_SCENARIO.md  ENTERPRISE_CONTEXT.md  IMPLEMENTATION_SUMMARY.md  NEW_AWS_ACCOUNT_SCENARIO.md  README.md  SYSTEM_INITIATIVE_SETUP.md  VANTA_CHANGES_SUMMARY.md  VANTA_OAUTH_SETUP.md  chaossec_history.json  demo_run.py  env.example  pyproject.toml  requirements.txt  test_chaossec.py
chaossec_evidence/2025-10-10/: CC7.2_e86353c3.json  CC7.3_e86353c3.json  CC8.1_e86353c3.json  CC9.1_e86353c3.json
infrastructure/: __init__.py  app.py  cdk.json  chaossec_stack.py
scripts/: setup.sh  teardown.sh
src/chaossec/: __init__.py  agent_brain.py  aws_handler.py  config.py  logger.py  orchestrator.py  semgrep_scan.py  system_initiative.py  vanta_integration.py
src/lambda_handlers/: __init__.py  chaos_executor_handler.py  orchestrator_handler.py  reporter_handler.py  scanner_handler.py
tests/: __init__.py  conftest.py  test_agent_brain.py  test_config.py  test_orchestrator.py  test_semgrep_scan.py
tests/mock_data/: sample_aws_logs.json  sample_semgrep_output.json
